5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1716_2506.log
== TEST (2019-05-10 18:37:23) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qtv
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (pct*ano) - (qtv*ano)
		
	if tbano >= 12000:
		print("LIMITE")
	elif tbano <= 0:
		print("EXTINTO")
	
	
	ano += 1
	
print(ano)
-- OUTPUT:
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
EXTINTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:37:40) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qtv
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (pct*ano) - (qtv*ano)
		if tbano >= 12000:
		print("LIMITE")
elif tbano <= 0:
		print("EXTINTO")
	
	
	ano += 1
	
print(ano)
-- ERROR:
File "XXXX", line 11
    if tbano >= 12000:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:37:57) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qtv
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (pct*ano) - (qtv*ano)
	
	
	ano += 1
	
if tbano >= 12000:
print("LIMITE")

elif tbano <= 0:
print("EXTINTO")
	
	
	
print(ano)
-- ERROR:
File "XXXX", line 16
    print("LIMITE")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:38:02) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qtv
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (pct*ano) - (qtv*ano)
	
	
	ano += 1
	
if tbano >= 12000:
	print("LIMITE")

elif tbano <= 0:
	print("EXTINTO")
	
	
	
print(ano)
-- ERROR:
File "XXXX", line 16
    print("LIMITE")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:39:06) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qtv
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (pct*ano) - (qtv*ano)
	
	
	ano += 1
	
if tbano >= 12000:
	print("LIMITE")

elif tbano <= 0:
	print("EXTINTO")
	
	
	
print(ano)
-- ERROR:
File "XXXX", line 16
    print("LIMITE")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:45:29) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qtv
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (tbano*pct) - (qtv)
	
	
	ano += 1
	
if tbano >= 12000:
	print("LIMITE")

elif tbano <= 0:
	print("EXTINTO")
	
	
	
print(ano)
-- ERROR:
File "XXXX", line 16
    print("LIMITE")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:46:07) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qtv
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (tbano*pct) - (qtv)
	print(tbano)
	
	ano += 1	
	
	
print(ano)
-- OUTPUT:
8.099999999999994
-126.414
-268.99884
-420.1387704
-580.347096624
-750.1679224214399
-930.1779977667263
-1120.9886776327298
-1323.2479982906937
-1537.6428781881352
-1764.9014508794232
-2005.7955379321886
-2261.1432702081197
-2531.8118664206067
-2818.7205784058433
-3122.843813110194
-3445.2144418968055
-3786.927308410614
-4149.142946915251
-4533.091523730166
-4940.077015153976
-5371.481636063215
-5828.770534227007
-6313.4967662806275
-6827.306572257465
-7371.944966592912
-7949.261664588487
-8561.217364463797
-9209.890406331624
-9897.48383071152
-10626.332860554212
-11398.912832187465
-12217.847602118713
-13085.918458245835
-14006.073565740584
-14981.437979685019
-16015.32425846612
-17111.243713974087
-18272.91833681253
-19504.293437021282
-20809.551043242558
-22193.124105837112
-23659.71155218734
-25214.29424531858
-26862.151900037694
-28608.881014039955
-30460.413874882353
-32423.038707375294
-34503.42102981781
-36708.62629160687
-39046.14386910329
-41523.912501249484
-44150.3472513244
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:46:20) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qtv
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (tbano*pct) - (qtv)
	print(tbano)
	
	ano += 1	
	
	
print(ano)
-- OUTPUT:
8.099999999999994
-126.414
-268.99884
-420.1387704
-580.347096624
-750.1679224214399
-930.1779977667263
-1120.9886776327298
-1323.2479982906937
-1537.6428781881352
-1764.9014508794232
-2005.7955379321886
-2261.1432702081197
-2531.8118664206067
-2818.7205784058433
-3122.843813110194
-3445.2144418968055
-3786.927308410614
-4149.142946915251
-4533.091523730166
-4940.077015153976
-5371.481636063215
-5828.770534227007
-6313.4967662806275
-6827.306572257465
-7371.944966592912
-7949.261664588487
-8561.217364463797
-9209.890406331624
-9897.48383071152
-10626.332860554212
-11398.912832187465
-12217.847602118713
-13085.918458245835
-14006.073565740584
-14981.437979685019
-16015.32425846612
-17111.243713974087
-18272.91833681253
-19504.293437021282
-20809.551043242558
-22193.124105837112
-23659.71155218734
-25214.29424531858
-26862.151900037694
-28608.881014039955
-30460.413874882353
-32423.038707375294
-34503.42102981781
-36708.62629160687
-39046.14386910329
-41523.912501249484
-44150.3472513244
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:46:23) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qit
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (tbano*pct) - (qtv)
	print(tbano)
	
	ano += 1	
	
	
print(ano)
-- OUTPUT:
1173.04
1108.4224
1039.9277439999998
967.3234086399998
890.3628131583998
808.7845819479038
722.311656864778
630.6503562766646
533.4893776532645
430.4987403124603
321.32866473120794
205.6083846150804
82.94488769198523
-47.078419046495654
-184.9031241892854
-330.9973116406425
-485.85715033908104
-650.0085793594259
-824.0090941209914
-1008.4496397682509
-1203.956618154346
-1411.1940152436068
-1630.8656561582231
-1863.7175955277166
-2110.54065125938
-2372.1730903349426
-2649.5034757550393
-2943.4736843003416
-3255.0821053583622
-3585.387031679864
-3935.510253580656
-4306.640868795495
-4700.039320923225
-5117.041680178619
-5559.064180989336
-6027.608031848696
-6524.264513759617
-7050.720384585195
-7608.763607660307
-8200.289424119925
-8827.30678956712
-9491.945196941146
-10196.461908757614
-10943.24962328307
-11734.844600680055
-12573.935276720858
-13463.37139332411
-14406.173676923558
-15405.544097538972
-16464.87674339131
-17587.76934799479
-18778.035508874476
-20039.717639406947
-21377.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:46:42) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qit
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (tbano*pct) - (qtv)
	nt(tbano
	
	ano += 1	
	
	
print(ano)
-- ERROR:
File "XXXX", line 13
    ano += 1	
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:46:45) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qit
ano = 0

while qit > 0 and qit < 12000:
	
	tbano = tbano + (tbano*pct) - (qtv)
		
	ano += 1	
	
	
print(ano)
-- ERROR:
File "XXXX", line 13
    ano += 1	
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:57:36) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qit
tA = 0
ano = 0

while qit > 0 and qit < 12000:
	
	
	tA	 = tbano + (tbano*pct)
	tbano = tA - (qtv)
	
	ano += 1	
	
	
print(ano)
-- ERROR:
File "XXXX", line 13
    ano += 1	
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:58:00) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qit
tA = 0
ano = 0

while tbano > 0 and tbano < 12000:
	
	
	tA	 = tbano + (tbano*pct)
	tbano = tA - (qtv)
	
	ano += 1	
	
	
print(ano)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 18:59:10) 
-- CODE:
qit = int(input("Qtd de tambaquis no tanque: "))
pct = int(input("% crescimento tambaqui: "))/100
qtv = int(input("Qtd tambaquis para venda: "))

tbano = qit
tA = 0
ano = 0

while tbano > 0 and tbano < 12000:
	
	
	tA	 = tbano + (tbano*pct)
	tbano = tA - (qtv)
	
	ano += 1	
	
if tbano >= 1200:
	print("LIMITE")
elif tbano <= 0:
	print("EXTINCAO")
	
print(ano)
-- EXECUTION TIME:
0.161438
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
